# juce-SimpleGainPlugin

./: CMakeLists.txt  README.md
Source/: PluginProcessor.cpp  PluginProcessor.h
